--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     
     <div class="container">
+
+      <div>
+        <h1>Score: <span id="score">0</span></h1>
+      </div>
+
       <div id="game-box">
         <!-- //* los elementos serán añadidos aqui por medio de javascript (manipulación de DOM) -->
         <!-- <div id="ball"></div> -->
